<resources>
    <string name="Illegal_info">Illegal application ,check init !</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_back">返回</string>
    <string name="action_add_to_album">加入应用集</string>
    <string name="action_album_item_delete">删除</string>
    <string name="action_album_item_edit">编辑应用集</string>
    <string name="action_already_add_black_list">已拉黑</string>
    <string name="action_already_favor">已收藏</string>
    <string name="action_already_follow">已关注</string>
    <string name="action_cancel">取消</string>
    <string name="action_cancel_delete">我再想想</string>
    <string name="action_collect">收藏</string>
    <string name="action_confirm">确定</string>
    <string name="action_confirm_delete">我要删除</string>
    <string name="action_continue">继续</string>
    <string name="action_copy">复制</string>
    <string name="action_copy_result">复制结果</string>
    <string name="action_create_album">创建应用集</string>
    <string name="action_delete">删除</string>
    <string name="action_delete_all">全部删除</string>
    <string name="action_do_not_alert">不再提醒</string>
    <string name="action_do_not_alert_this_version">不再提醒此版本</string>
    <string name="action_download">下载</string>
    <string name="action_download_again">重新下载</string>
    <string name="action_downloading">下载中</string>
    <string name="action_favor">收藏</string>
    <string name="action_favorite_feed">收藏</string>
    <string name="action_follow">关注</string>
    <string name="action_follow_him_or_her">关注</string>
    <string name="action_go_setting">前往设置</string>
    <string name="action_i_see">知道了</string>
    <string name="action_install">安装</string>
    <string name="action_install_all">一键安装</string>
    <string name="action_mutual_concern">相互关注</string>
    <string name="action_no">否</string>
    <string name="action_one_click_to_install">一键安装</string>
    <string name="action_open">打开</string>
    <string name="action_pause">暂停</string>
    <string name="action_preview">预览</string>
    <string name="action_rank">排行</string>
    <string name="action_send_message">发私信</string>
    <string name="action_settings">设置</string>
    <string name="action_share">分享</string>
    <string name="action_submit">提交</string>
    <string name="action_test_again">重新测试</string>
    <string name="action_theme_being_used">使用中</string>
    <string name="action_theme_to_use">使用</string>
    <string name="action_unfavorite_feed">已收藏</string>
    <string name="action_uninstall">卸载</string>
    <string name="action_upgrade">更新</string>
    <string name="action_upgrade_all">全部更新</string>
    <string name="action_upgrade_immediately">立即更新</string>
    <string name="action_view">查看</string>
    <string name="action_view_app">应用详情</string>
    <string name="action_wait">等待</string>
    <string name="action_write_comment">写回复</string>
    <string name="action_yes">是</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">006C19B62C986A69E2A37D383E390CCFC48ABC197731E1390BC4D129B020AE98B8E31C3F95741103B8EE4F53AEA0EB2864BDDD2799B3329E3B7920CF3E7410C513ABC6D154C593B899F523E168D7CF91B0</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">0000E4EFBE71586C7529F338A6ADD89E18FF9C37F06A99922E028DC503F61F2FF76858AB6C4DC72753A006156D5DE30640</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">7B4B5F41FC906C3E7D624B397F12FC93</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">008C0FB06B11C3FD22366CF0C66C8273F81ECB053B3E806116938C6680DBB62228</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">00C16B0A25106B9034DDB2F2E598E440F498CE2B215B78FA4E28CD70E4FA3276260C5B960458DF2C1AEF44F588812360D7</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">00DE329ED2E6E1FF46A9C3A50878732D6828E523A92803E081968960AAB33C88EA42D8EF20496858929D6C9E19916FD87B5874725413C01AB43F95AF33AC394CAB87E8605DDBDD9C639328331EFCEE65BEDEE6F64D989148798AD5EB0998D315E3</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">009EFEEABC86B0B61640A5C971CBC5DA55FF9A05D1E5CE3576BCD895A8A860874B</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">0046A730F8623EA37B6FC31D17650ADA4F4D8D136E5F35F52F8F81CFD0CCB2E15F47E7A33BA6C258F849BB345ABB107318</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">00F9A6D5E41B50800698B845B3D304F9DE513E14AACE35979E20720FE1D92815F0</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">003CA47FB5DF3F92A998F88EF2687B8A61071539056A7718DB19160709EB9B24671A52C8A0ED4C9719ADFBA947D29FAE4D</string>
    <string name="feed_entrance_discovery">提交发现</string>
    <string name="menu_action_chat">私信</string>
    <string name="menu_add_feed">发布</string>
    <string name="menu_black_list">加入黑名单</string>
    <string name="menu_ignore_current">忽略当前更新</string>
    <string name="menu_ignore_ever">永久忽略更新</string>
    <string name="menu_more">更多</string>
    <string name="menu_notification">通知</string>
    <string name="menu_open">打开</string>
    <string name="menu_open_with_play">去其他市场查看</string>
    <string name="menu_qr_scan">二维码</string>
    <string name="menu_report">举报</string>
    <string name="menu_search">搜索</string>
    <string name="menu_share">分享</string>
    <string name="menu_uninstall">卸载</string>
    <string name="menu_view">查看</string>
    <string name="menu_view_package">查看包名</string>
    <string name="pref_description_auto_install_on_downloaded">下载完成后自动开始安装</string>
    <string name="pref_description_check_beta_version">酷安 Beta 版会包含一些最新功能和优化，但没有正式版稳定，如果你想更稳定地使用酷安，建议你关闭该选项</string>
    <string name="pref_description_clear_all">查看酷安应用信息</string>
    <string name="pref_description_clear_cache">清除酷安的图片缓存和下载缓存</string>
    <string name="pref_description_clear_cache_on_exit">勾选后将在每次退出后都清除缓存，默认只会清除三天前的缓存</string>
    <string name="pref_description_delete_file_on_installed">如果你想保留下载的文件，请关闭该选项</string>
    <string name="pref_description_download_filename_cn_enabled">如果你的机型不支持中文或下载文件名为乱码时，请关闭该选项</string>
    <string name="pref_description_install_silent_enabled">在后台安装程序(需要Root权限，如果没有则进行普通安装)</string>
    <string name="pref_description_push_service_enabled">关闭后完全停止回复、@、私信的所有通知推送</string>
    <string name="pref_description_reset_preferences">将酷安设置重置为默认设置</string>
    <string name="pref_description_show_notice_notification_enabled">关闭后不在通知栏中显示回复、@、以及私信通知消息</string>
    <string name="pref_enable_notification_vibrate">通知振动</string>
    <string name="pref_floating_notification">浮动通知</string>
    <string name="pref_header_clear">数据清理</string>
    <string name="pref_header_download">下载安装</string>
    <string name="pref_header_notification">通知选项</string>
    <string name="pref_header_service">服务选项</string>
    <string name="pref_summary_show_hide_apps">在应用管理列表显示已隐藏的应用，开启后在下次进入酷安时生效</string>
    <string name="pref_summary_use_internal_webview">打开外部链接时，不用打开外部浏览器，直接在应用内查看</string>
    <string name="pref_title_auto_hide_bottom_navigation">自动隐藏底栏</string>
    <string name="pref_title_auto_install_on_downloaded">自动开始安装</string>
    <string name="pref_title_check_beta_version">检测 Beta 更新</string>
    <string name="pref_title_clear_all">应用信息</string>
    <string name="pref_title_clear_cache">清除缓存</string>
    <string name="pref_title_clear_cache_on_exit">退出清除缓存</string>
    <string name="pref_title_delete_file_on_installed">安装完成后删除下载文件</string>
    <string name="pref_title_download_dir">自定义下载目录</string>
    <string name="pref_title_download_filename_cn_enabled">下载文件保存为中文文件名</string>
    <string name="pref_title_download_when_wifi">仅在Wi-Fi下下载应用</string>
    <string name="pref_title_enable_notification_sound">通知声音</string>
    <string name="pref_title_install_silent_enabled">静默安装</string>
    <string name="pref_title_limited_background">后台纯净</string>
    <string name="pref_title_navigation_color">导航栏跟随主题颜色</string>
    <string name="pref_title_push_service_enabled">接收推送</string>
    <string name="pref_title_reset_preferences">重置设置</string>
    <string name="pref_title_show_hide_apps">显示隐藏应用</string>
    <string name="pref_title_show_installed_notification_enabled">通知栏显示安装完成通知</string>
    <string name="pref_title_show_notice_notification_enabled">通知栏消息</string>
    <string name="pref_title_show_upgrade_notification_enabled">通知栏更新提醒</string>
    <string name="pref_title_show_upgrade_notification_enabled_content">关闭后不在通知栏中显示新应用更新提醒</string>
    <string name="pref_title_test_and_log">检查日志和测试</string>
    <string name="pref_title_transparent_status_bar">沉浸式状态栏</string>
    <string name="pref_title_use_internal_webview">使用应用内浏览器</string>
    <string name="str_app_category_rank_type_comment">按评论数排序</string>
    <string name="str_app_category_rank_type_default">按默认排序</string>
    <string name="str_app_category_rank_type_download">按下载数排序</string>
    <string name="str_app_category_rank_type_follow">按关注排序</string>
    <string name="str_app_category_rank_type_last_update">按更新时间排序</string>
    <string name="str_app_category_rank_type_pub_data">按收录时间排序</string>
    <string name="str_app_category_rank_type_rating">按评分排序</string>
    <string name="str_app_detail_info">详情信息</string>
    <string name="str_app_language">界面语言</string>
    <string name="str_app_package_name">应用包名</string>
    <string name="str_app_size">软件大小</string>
    <string name="str_developer">开发者</string>
    <string name="str_download_game">下载游戏</string>
    <string name="str_gitf_fetch_success">领取成功</string>
    <string name="str_history_version_download">历史版本下载</string>
    <string name="str_history_version_log">更新记录</string>
    <string name="str_latest_version">最新版本</string>
    <string name="str_my_gift">我的礼包</string>
    <string name="str_saved_to_my_gift">礼包已保存至『我的礼包』</string>
    <string name="str_support_rom">支持ROM</string>
    <string name="str_update_date">更新时间</string>
    <string name="str_view_all_permission">查看全部权限</string>
    <string name="title_app_manager">应用管理</string>
</resources>