<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.coolapk.market.widget.preference.Preference android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="默认启动页" android:key="app_main_mode" android:summary="选择你喜欢的默认启动页" android:inputType="textCapWords"/>
    <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_navigation_color" android:key="navigation_bar_color"/>
    <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_auto_hide_bottom_navigation" android:key="auto_hide_bottom_navigation"/>
    <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_transparent_status_bar" android:key="transparent_status_bar"/>
    <com.coolapk.market.widget.preference.CheckBoxPreference android:title="显示快速返回按钮" android:key="show_fast_return_view"/>
    <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_use_internal_webview" android:key="use_internal_webview" android:summary="@string/pref_summary_use_internal_webview"/>
    <com.coolapk.market.widget.preference.PreferenceGroup android:title="@string/pref_header_download">
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_auto_install_on_downloaded" android:key="auto_install_on_downloaded" android:summary="@string/pref_description_auto_install_on_downloaded"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_delete_file_on_installed" android:key="delete_file_on_installed" android:summary="@string/pref_description_delete_file_on_installed"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_download_filename_cn_enabled" android:key="download_filename_cn_enabled" android:summary="@string/pref_description_download_filename_cn_enabled"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_show_hide_apps" android:key="show_hide_apps" android:summary="@string/pref_summary_show_hide_apps"/>
        <com.coolapk.market.widget.preference.Preference android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/pref_title_download_dir" android:key="download_dir" android:inputType="textCapWords"/>
    </com.coolapk.market.widget.preference.PreferenceGroup>
    <com.coolapk.market.widget.preference.PreferenceGroup android:title="@string/pref_header_service">
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_check_beta_version" android:key="check_beta_version_enabled" android:summary="@string/pref_description_check_beta_version"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_push_service_enabled" android:key="push_service_enabled" android:summary="@string/pref_description_push_service_enabled"/>
    </com.coolapk.market.widget.preference.PreferenceGroup>
    <com.coolapk.market.widget.preference.PreferenceGroup android:title="@string/pref_header_notification">
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_show_upgrade_notification_enabled" android:key="show_upgrade_notification_enabled"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_show_notice_notification_enabled" android:key="show_notice_notification_enabled" android:summary="@string/pref_description_show_notice_notification_enabled" android:dependency="push_service_enabled"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_show_installed_notification_enabled" android:key="show_installed_notification_enabled" android:dependency="push_service_enabled"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_floating_notification" android:key="floating_notification"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_enable_notification_sound" android:key="notification_sound"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_enable_notification_vibrate" android:key="notification_vibrate"/>
    </com.coolapk.market.widget.preference.PreferenceGroup>
    <com.coolapk.market.widget.preference.PreferenceGroup android:title="@string/pref_header_clear">
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_clear_cache_on_exit" android:key="clear_cache_on_exit" android:summary="@string/pref_description_clear_cache_on_exit"/>
        <com.coolapk.market.widget.preference.CheckBoxPreference android:title="@string/pref_title_limited_background" android:key="limited_background_enabled"/>
        <com.coolapk.market.widget.preference.Preference android:title="@string/pref_title_reset_preferences" android:key="reset_preferences" android:summary="@string/pref_description_reset_preferences"/>
        <com.coolapk.market.widget.preference.Preference android:title="@string/pref_title_clear_cache" android:key="clear_cache" android:summary="@string/pref_description_clear_cache"/>
        <com.coolapk.market.widget.preference.Preference android:title="@string/pref_title_clear_all" android:key="clear_all" android:summary="@string/pref_description_clear_all"/>
        <com.coolapk.market.widget.preference.Preference android:title="@string/pref_title_test_and_log" android:key="check_log_and_test"/>
    </com.coolapk.market.widget.preference.PreferenceGroup>
</PreferenceScreen>
