<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_view" android:title="@string/menu_view"/>
    <item android:id="@+id/action_open" android:title="@string/menu_open"/>
    <item android:id="@+id/action_uninstall" android:title="@string/menu_uninstall"/>
    <item android:id="@+id/action_view_package" android:title="@string/menu_view_package"/>
    <item android:id="@+id/action_ignore_current" android:title="@string/menu_ignore_current"/>
    <item android:id="@+id/action_ignore_ever" android:title="@string/menu_ignore_ever"/>
    <item android:id="@+id/action_open_with_play" android:title="@string/menu_open_with_play"/>
    <item android:id="@+id/action_discovery" android:title="@string/feed_entrance_discovery"/>
</menu>
