<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_white_24dp" android:id="@+id/action_search" android:title="@string/menu_search" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_talk_outline_white_24dp" android:id="@+id/action_messages" android:visible="false" android:orderInCategory="1" android:title="@string/menu_action_chat" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_more_white_24dp" android:id="@+id/action_more_item" android:orderInCategory="101" android:title="@string/menu_more" app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_share" android:orderInCategory="100" android:title="@string/menu_share"/>
            <item android:id="@+id/action_view_home" android:visible="false" android:orderInCategory="101" android:title="查看个人主页"/>
            <item android:id="@+id/action_black_list" android:visible="false" android:orderInCategory="102" android:title="@string/menu_black_list"/>
            <item android:id="@+id/action_report" android:visible="false" android:orderInCategory="103" android:title="@string/menu_report"/>
            <item android:id="@+id/action_admin_command" android:visible="false" android:orderInCategory="104" android:title="管理"/>
        </menu>
    </item>
</menu>
