<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:tag="layout/fetch_gift_0" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/content_layout" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp">
            <TextView android:textSize="20sp" android:textColor="?android:attr/textColorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_gitf_fetch_success"/>
            <TextView android:textSize="16sp" android:textColor="?android:attr/textColorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/str_saved_to_my_gift"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/dark_red" android:tag="binding_2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_weight="1"/>
            <Button android:gravity="center" android:id="@+id/copy_view" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_copy" style="@style/res_2131952243_widget_appcompat_button_borderless_colored"/>
        </LinearLayout>
        <LinearLayout android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@+id/my_gift_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_my_gift" style="@style/res_2131952243_widget_appcompat_button_borderless_colored"/>
            <TextView android:id="@+id/download_game_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_download_game" style="@style/res_2131952243_widget_appcompat_button_borderless_colored"/>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar android:layout_gravity="center" android:id="@+id/loading_view" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</FrameLayout>
