<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:tag="layout/item_app_detail_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.coolapk.market.design.CoolapkCardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardStyle="2">
        <TableLayout android:paddingLeft="12dp" android:paddingTop="16dp" android:paddingRight="12dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:shrinkColumns="1">
            <TableRow android:layout_marginTop="0dp" android:layout_marginBottom="8dp">
                <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="?android:attr/textColorPrimary" android:layout_span="2" android:text="@string/str_app_detail_info"/>
            </TableRow>
            <TableRow>
                <TextView android:textColor="?android:attr/textColorSecondary" android:gravity="right" android:layout_marginRight="16dp" android:text="@string/str_app_package_name" android:textIsSelectable="true"/>
                <TextView android:textColor="?android:attr/textColorPrimary" android:id="@+id/package_name_view" android:tag="binding_1" android:textIsSelectable="true"/>
            </TableRow>
            <TableRow android:layout_marginTop="4dp">
                <TextView android:textColor="?android:attr/textColorSecondary" android:gravity="right" android:layout_marginRight="16dp" android:text="@string/str_latest_version"/>
                <TextView android:textColor="?android:attr/textColorPrimary" android:id="@+id/version_view" android:tag="binding_2" android:textIsSelectable="true"/>
            </TableRow>
            <TableRow android:layout_marginTop="4dp">
                <TextView android:textColor="?android:attr/textColorSecondary" android:gravity="right" android:layout_marginRight="16dp" android:text="@string/str_update_date"/>
                <TextView android:textColor="?android:attr/textColorPrimary" android:id="@+id/update_date_view" android:tag="binding_3" android:textIsSelectable="true"/>
            </TableRow>
            <TableRow android:layout_marginTop="4dp">
                <TextView android:textColor="?android:attr/textColorSecondary" android:gravity="right" android:layout_marginRight="16dp" android:text="@string/str_support_rom"/>
                <TextView android:textColor="?android:attr/textColorPrimary" android:id="@+id/rom_support_view" android:tag="binding_4" android:textIsSelectable="true"/>
            </TableRow>
            <TableRow android:layout_marginTop="4dp">
                <TextView android:textColor="?android:attr/textColorSecondary" android:gravity="right" android:layout_marginRight="16dp" android:text="@string/str_app_size"/>
                <TextView android:textColor="?android:attr/textColorPrimary" android:id="@+id/apk_size_view" android:tag="binding_5" android:textIsSelectable="true"/>
            </TableRow>
            <TableRow android:layout_marginTop="4dp">
                <TextView android:textColor="?android:attr/textColorSecondary" android:gravity="right" android:layout_marginRight="16dp" android:text="@string/str_app_language"/>
                <TextView android:textColor="?android:attr/textColorPrimary" android:id="@+id/language_view" android:tag="binding_6" android:textIsSelectable="true"/>
            </TableRow>
            <TableRow android:id="@+id/developer_layout" android:tag="binding_7" android:layout_marginTop="4dp">
                <TextView android:textColor="?android:attr/textColorSecondary" android:gravity="right" android:layout_marginRight="16dp" android:text="@string/str_developer"/>
                <TextView android:id="@+id/developer_view" android:tag="binding_8"/>
            </TableRow>
        </TableLayout>
    </com.coolapk.market.design.CoolapkCardView>
    <Space android:layout_width="match_parent" android:layout_height="12dp"/>
    <com.coolapk.market.design.CoolapkCardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardStyle="2">
        <TableLayout android:id="@+id/permission_click_view" android:background="?android:attr/selectableItemBackground" android:paddingLeft="12dp" android:paddingRight="12dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:shrinkColumns="1">
            <TableRow android:id="@+id/permission_title_view" android:layout_marginTop="16dp" android:layout_marginBottom="2dp">
                <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="?android:attr/textColorPrimary" android:id="@+id/permission_title_text_view" android:tag="binding_9" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_span="2"/>
            </TableRow>
            <TableRow android:id="@+id/permission_view" android:paddingTop="8dp">
                <TextView android:textColor="?android:attr/textColorPrimary" android:id="@+id/permission_text_view" android:tag="binding_10" android:layout_column="1" android:lineSpacingMultiplier="1.2" android:textIsSelectable="true"/>
            </TableRow>
            <TableRow android:id="@+id/permission_num_view" android:layout_marginTop="4dp">
                <TextView android:id="@+id/view_all_permission_view" android:tag="binding_11" android:layout_column="1" android:text="@string/str_view_all_permission"/>
            </TableRow>
        </TableLayout>
    </com.coolapk.market.design.CoolapkCardView>
    <Space android:layout_width="match_parent" android:layout_height="12dp"/>
    <com.coolapk.market.design.CoolapkCardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardStyle="2">
        <TableLayout android:background="?android:attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:shrinkColumns="1">
            <TableRow android:id="@+id/change_history_title_view" android:layout_marginTop="16dp" android:layout_marginBottom="2dp">
                <RelativeLayout android:layout_span="2" android:layout_weight="1">
                    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="?android:attr/textColorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_history_version_log"/>
                    <TextView android:textSize="14sp" android:id="@+id/version_history_view" android:tag="binding_12" android:background="?attr/selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_history_version_download" android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </TableRow>
            <TableRow android:id="@+id/change_history_view" android:layout_marginTop="4dp">
                <TextView android:textColor="?android:attr/textColorPrimary" android:id="@+id/change_history_text_view" android:tag="binding_13" android:layout_column="1" android:lineSpacingMultiplier="1.2"/>
            </TableRow>
        </TableLayout>
    </com.coolapk.market.design.CoolapkCardView>
</LinearLayout>
